--- a/web/index.html
+++ b/web/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tutoring HTL Leonding</title>
     <link rel="stylesheet" href="styles/style.css">
-    <link rel="stylesheet" href="assets/bootstrap-5.3.8/">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <script type="module" src="scripts/script.js"></script>
 </head>
 <body>
@@ -18,5 +18,7 @@
     <footer>
         <p>&copy; 2025 Tutoring HTL Leonding</p>
     </footer>
+
+    <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
