--- a/web/index.html
+++ b/web/index.html
@@ -6,6 +6,9 @@
         <title>Nachhilfe Markus Harnusek</title>
         <link rel="stylesheet" href="styles/style.css">
         <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+        <!-- GSAP and ScrollTrigger -->
+        <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
         <script type="module" src="scripts/script.js"></script>
     </head>
     <body>
@@ -37,17 +40,77 @@
             <div class="container">
                 <div class="row align-items-center min-vh-100">
                     <div class="col-12 text-center">
-                        <h1 class="display-3 fw-bold mb-4">Hi, ich bin Markus.</h1>
-                        <p class="lead mb-4">
+                        <h1 class="display-3 fw-bold mb-4 hero-title">Hi, ich bin Markus.</h1>
+                        <p class="lead mb-4 hero-text">
                             HTL-Schüler aus der 2CHIF – ich unterstütze dich in Mathe, Physik, Programmierung und mehr.
                         </p>
-                        <p class="fs-5 mb-5">
+                        <p class="fs-5 mb-5 hero-text">
                             Gemeinsam arbeiten wir an deinen Themen, bis alles sitzt. 
                             Entspannt, verständlich und ohne Druck.
                         </p>
-                        <div class="d-grid gap-3 d-md-flex justify-content-md-center">
+                        <div class="d-grid gap-3 d-md-flex justify-content-md-center hero-buttons">
                             <a href="booking.html" class="btn btn-primary btn-lg px-4">Termin vereinbaren</a>
                             <a href="#subjects" class="btn btn-outline-secondary btn-lg px-4">Mehr erfahren</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- About Me Section -->
+        <section class="about-section py-5" id="subjects">
+            <div class="container">
+                <div class="row justify-content-center mb-5">
+                    <div class="col-lg-8 text-center about-intro">
+                        <h2 class="display-5 fw-bold mb-4">Über mich</h2>
+                        <p class="lead">
+                            Ich bin 16 Jahre alt und besuche die HTL Leonding. Neben dem Lernen programmiere ich 
+                            gerne und helfe anderen Schülern dabei, ihre Ziele zu erreichen. Nachhilfe gebe ich, 
+                            weil es mir Spaß macht, Wissen weiterzugeben – auf Augenhöhe und entspannt.
+                        </p>
+                    </div>
+                </div>
+
+                <!-- Subjects Section -->
+                <div class="row justify-content-center mb-4">
+                    <div class="col-12 text-center subjects-title">
+                        <h3 class="h2 mb-4">Meine Fächer</h3>
+                    </div>
+                </div>
+                <div class="row g-4 justify-content-center subjects-grid">
+                    <div class="col-md-6 col-lg-4">
+                        <div class="subject-card">
+                            <div class="subject-icon mb-3">📐</div>
+                            <h4 class="h5 mb-3">Angewandte Mathematik</h4>
+                            <p class="text-muted">Von Algebra bis Analysis – ich helfe dir, mathematische Konzepte zu verstehen und anzuwenden.</p>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="subject-card">
+                            <div class="subject-icon mb-3">⚡</div>
+                            <h4 class="h5 mb-3">Physik</h4>
+                            <p class="text-muted">Mechanik, Elektrizität und mehr – wir machen komplexe Themen verständlich und greifbar.</p>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="subject-card">
+                            <div class="subject-icon mb-3">💻</div>
+                            <h4 class="h5 mb-3">Programmierung & Software Engineering</h4>
+                            <p class="text-muted">Code, Algorithmen und Softwareentwicklung – vom Anfänger bis zum fortgeschrittenen Level.</p>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="subject-card">
+                            <div class="subject-icon mb-3">🏢</div>
+                            <h4 class="h5 mb-3">Betriebsorganisation</h4>
+                            <p class="text-muted">Betriebliche Abläufe und Organisation – strukturiert und praxisnah erklärt.</p>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="subject-card">
+                            <div class="subject-icon mb-3">📊</div>
+                            <h4 class="h5 mb-3">Rechnungswesen</h4>
+                            <p class="text-muted">Buchhaltung und kaufmännisches Rechnen – Schritt für Schritt zum Verständnis.</p>
                         </div>
                     </div>
                 </div>
