--- a/web/index.html
+++ b/web/index.html
@@ -6,9 +6,9 @@
         <title>Nachhilfe Markus Harnusek</title>
         <link rel="stylesheet" href="styles/style.css">
         <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-        <!-- GSAP and ScrollTrigger -->
-        <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
+        <!-- GSAP and ScrollTrigger (Local) -->
+        <script src="assets/gsap/gsap.min.js"></script>
+        <script src="assets/gsap/ScrollTrigger.min.js"></script>
         <script type="module" src="scripts/script.js"></script>
     </head>
     <body>
