Added custom scroll bar

--- a/web/index.html
+++ b/web/index.html
@@ -42,11 +42,11 @@
                     <div class="col-12 text-center">
                         <h1 class="display-3 fw-bold mb-4 hero-title">Hi, ich bin Markus.</h1>
                         <p class="lead mb-4 hero-text">
-                            HTL-Schüler aus der 2CHIF – ich unterstütze dich in Mathe, Physik, Programmierung und mehr.
+                            HTL-Schüler aus der 2CHIF – Dein Nachhilfelehrer in den wichtigster Fächern der HTL.
                         </p>
                         <p class="fs-5 mb-5 hero-text">
-                            Gemeinsam arbeiten wir an deinen Themen, bis alles sitzt. 
-                            Entspannt, verständlich und ohne Druck.
+                            Gemeinsam arbeiten wir an Deinen Themen, bis alles sitzt. 
+                            Entspannt, verständlich und ganz ohne Druck.
                         </p>
                         <div class="d-grid gap-3 d-md-flex justify-content-md-center hero-buttons">
                             <a href="booking.html" class="btn btn-primary btn-lg px-4">Termin vereinbaren</a>
