REworked mobile header

--- a/web/index.html
+++ b/web/index.html
@@ -39,7 +39,7 @@
 
             <div class="container">
                 <div class="row align-items-center min-vh-100">
-                    <div class="col-12 text-center">
+                    <div class="col-12 text-center" id="hero-text">
                         <h1 class="display-3 fw-bold mb-4 hero-title">Hi, ich bin Markus.</h1>
                         <p class="lead mb-4 hero-text">
                             HTL-Schüler aus der 2CHIF – Dein Nachhilfelehrer in den wichtigster Fächern der HTL.
@@ -48,7 +48,7 @@
                             Gemeinsam arbeiten wir an Deinen Themen, bis alles sitzt. 
                             Entspannt, verständlich und ganz ohne Druck.
                         </p>
-                        <div class="d-grid gap-3 d-md-flex justify-content-md-center hero-buttons">
+                        <div class="d-grid gap-3 d-md-flex justify-content-md-center hero-buttons" id="hero-buttons">
                             <a href="booking.html" class="btn btn-primary btn-lg px-4">Termin vereinbaren</a>
                             <a href="#subjects" class="btn btn-outline-secondary btn-lg px-4">Mehr erfahren</a>
                         </div>
