Reworked subject card animation

--- a/web/index.html
+++ b/web/index.html
@@ -64,10 +64,12 @@
                     <div class="col-lg-8 text-center about-intro">
                         <h2 class="display-5 fw-bold mb-4">Über mich</h2>
                         <p class="lead">
-                            Ich bin 16 Jahre alt und besuche die HTL Leonding. Neben dem Lernen programmiere ich 
-                            gerne und helfe anderen Schülern dabei, ihre Ziele zu erreichen. Nachhilfe gebe ich, 
-                            weil es mir Spaß macht, Wissen weiterzugeben – auf Augenhöhe und entspannt.
-                        </p>
+                            Ich bin Markus Harnúšek, 15 Jahre alt - Schüler der 2CHIF - und biete dir Nachhilfe für die
+                            9. Schulstufe.
+                            Mein große Leidenschaft ist Softwareentwicklung als auch die Arbeit mit Hardware, genauer Mikrocontrollern,
+                            PCs an sich. Weiters interessiert das Befassen mit Zahlen, komplexen Abläufen und Algorithmen. Mit meiner
+                            Erfahrung und meinen Erfolgen im Geben von Nachhilfe bin ich bereit dir zu helfen, den Stoff zu erklären, zu
+                            üben oder dich auf deine Prüfungen vorzubereiten.
                     </div>
                 </div>
 
